--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Suggests: mvtsplot
+Imports: pcaPP,
+    stats,
+    ggplot2,
+    plotly
