--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: mvtsplot
+Suggests: mvtsplot,
+    ggplot2,
+    plotly
 Imports: pcaPP,
     stats,
     ggplot2,
