--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: mvtsplot,
-    ggplot2,
-    plotly
+Suggests: mvtsplot
 Imports: pcaPP,
     stats,
     ggplot2,
