--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(ks,Hscv)
 importFrom(ks,kde)
 importFrom(mgcv,gam)
 importFrom(moments,moment)
+importFrom(mvtsplot,mvtsplot)
 importFrom(pcaPP,PCAproj)
 importFrom(plotly,ggplotly)
 importFrom(stats,prcomp)
