--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: oddstream
 Type: Package
 Title: Outlier Detection in Data Streams
 Version: 0.1.0
+Depends: R (>= 2.10)
 Author: Priyanga Dilini Talagala [aut, cre]
     Rob J. Hyndman [aut]
     Kate Smith-Miles [aut]
@@ -17,7 +18,7 @@ Description: This package proposes a framework that provides real time support f
     window is used to test for anomalous series within the newly arrived collection of series. Feature
     based representation of time series is used as the input to the model. To cope with concept drift,
     the forecast boundary for the system's typical behaviour is updated periodically.
-License: MIT + file LICENSE
+License: GPL-2
 LazyData: true
 RoxygenNote: 6.0.1
 Imports: pcaPP,
@@ -30,5 +31,9 @@ Imports: pcaPP,
     mgcv,
     moments ,
     RColorBrewer,
-    mvtsplot
+    mvtsplot,
+    tibble,
+    reshape,
+    dplyr,
+    graphics
 Encoding: UTF-8   
