--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,19 @@ export(find_odd_streams)
 export(get_pc_space)
 export(plotpc)
 export(set_outlier_threshold)
+import(ggplot2)
+import(graphics)
+import(stats)
 importFrom(MASS,mvrnorm)
 importFrom(RcppRoll,roll_mean)
 importFrom(RcppRoll,roll_var)
-importFrom(ggplot2,ggplot)
+importFrom(dplyr,mutate)
 importFrom(ks,Hscv)
 importFrom(ks,kde)
 importFrom(mgcv,gam)
 importFrom(moments,moment)
 importFrom(mvtsplot,mvtsplot)
 importFrom(pcaPP,PCAproj)
-importFrom(plotly,ggplotly)
+importFrom(reshape,melt)
 importFrom(stats,prcomp)
+importFrom(tibble,as_tibble)
