--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,4 @@ importFrom(pcaPP,PCAproj)
 importFrom(reshape,melt)
 importFrom(stats,prcomp)
 importFrom(tibble,as_tibble)
+importFrom(tidyr,gather)
