edit fine_odd_stream function. concept drift using kmmd

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports: pcaPP,
     reshape,
     dplyr,
     graphics,
-    tidyr
+    tidyr,
+    kernlab
 Encoding: UTF-8   
 Suggests: testthat,
     knitr,
