--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(MASS,mvrnorm)
 importFrom(RcppRoll,roll_mean)
 importFrom(RcppRoll,roll_var)
 importFrom(dplyr,mutate)
+importFrom(kernlab,kmmd)
 importFrom(ks,Hscv)
 importFrom(ks,kde)
 importFrom(mgcv,gam)
