--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,8 @@ Title: Outlier Detection in Data Streams
 Version: 0.1.0
 Depends: R (>= 3.4.1)
 Author: Priyanga Dilini Talagala [aut, cre]
-    Rob J. Hyndman [aut]
-    Kate Smith-Miles [aut]
-    Sevvandi Kandanaarachchi [aut]
-    Mario A. Munoz [aut]
+    Rob J. Hyndman [aut, ths]
+    Kate Smith-Miles [aut, ths]
 Maintainer: Priyanga Dilini Talagala <dilini.talagala@monash.edu>
 Description: This package proposes a framework that provides real time support for early detection of
     anomalous series within a large collection of streaming time series data. By definition, anomalies
@@ -18,7 +16,7 @@ Description: This package proposes a framework that provides real time support f
     window is used to test for anomalous series within the newly arrived collection of series. Feature
     based representation of time series is used as the input to the model. To cope with concept drift,
     the forecast boundary for the system's typical behaviour is updated periodically.
-License: GPL-2
+License: GPL-3
 LazyData: true
 RoxygenNote: 6.0.1
 Imports: pcaPP,
