--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Depends: R (>= 3.4.0)
 Maintainer: Priyanga Dilini Talagala <dilini.talagala@monash.edu>
 Authors@R: c(
     person("Priyanga Dilini", "Talagala", email="dilini.talagala@monash.edu", role= c("aut","cre")),
-    person("Rob J.", "Hyndman", role='ths'),
-    person("Kate", "Smith-Miles", role ='ths')
+    person("Rob J.", "Hyndman", role=c("aut","ths")),
+    person("Kate", "Smith-Miles", role=c("aut","ths"))
     )
 Description: We proposes a framework that provides real time support for early detection of
     anomalous series within a large collection of streaming time series data. By definition, anomalies
