--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,11 @@ Type: Package
 Title: Outlier Detection in Data Streams
 Version: 0.5.0
 Depends: R (>= 3.4.0)
-Maintainer: Priyanga Dilini Talagala <dilini.talagala@monash.edu>
+Maintainer: Priyanga Dilini Talagala <pritalagala@gmail.com>
 Authors@R: c(
-    person("Priyanga Dilini", "Talagala", email="dilini.talagala@monash.edu", role= c("aut","cre")),
-    person("Rob J.", "Hyndman", role=c("aut","ths")),
-    person("Kate", "Smith-Miles", role=c("aut","ths"))
+    person("Priyanga Dilini", "Talagala", email="pritalagala@gmail.com", role= c("aut","cre")),
+    person("Rob J.", "Hyndman", role=c("ths")),
+    person("Kate", "Smith-Miles", role=c("ths"))
     )
 Description: We proposes a framework that provides real time support for early detection of
     anomalous series within a large collection of streaming time series data. By definition, anomalies
@@ -17,7 +17,10 @@ Description: We proposes a framework that provides real time support for early d
     approach based on extreme value theory is used for this boundary prediction process. Then a sliding
     window is used to test for anomalous series within the newly arrived collection of series. Feature
     based representation of time series is used as the input to the model. To cope with concept drift,
-    the forecast boundary for the system's typical behaviour is updated periodically.
+    the forecast boundary for the system's typical behaviour is updated periodically.  More details
+    regarding the algorithm can be found in Talagala, P. D., Hyndman, R. J., Smith-Miles, K.,, et al.
+    (2019) <doi:10.1080/10618600.2019.1617160>.
+BugReports: https://github.com/pridiltal/oddstream/issues
 License: GPL-3
 LazyData: true
 RoxygenNote: 6.1.1
@@ -40,7 +43,4 @@ Imports: pcaPP,
     magrittr
 Encoding: UTF-8
 Suggests: testthat,
-    knitr,
-    rmarkdown,
     tidyverse
-VignetteBuilder: knitr
