--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Description: We proposes a framework that provides real time support for early d
     window is used to test for anomalous series within the newly arrived collection of series. Feature
     based representation of time series is used as the input to the model. To cope with concept drift,
     the forecast boundary for the system's typical behaviour is updated periodically.  More details
-    regarding the algorithm can be found in Talagala, P. D., Hyndman, R. J., Smith-Miles, K.,, et al.
+    regarding the algorithm can be found in Talagala, P. D., Hyndman, R. J., Smith-Miles, K., et al.
     (2019) <doi:10.1080/10618600.2019.1617160>.
 BugReports: https://github.com/pridiltal/oddstream/issues
 License: GPL-3
